feat(files): add provenance history
Closes #56
